# chat-rs

./: Cargo.toml  README.md
proto/: chat.proto
src/: client.rs  server.rs
